# vm-manager

./: .gitignore  Cargo.toml
brand/nebula-vm/: boot.ksh  config.xml  halt.ksh  install.ksh  platform.xml  support.ksh  uninstall.ksh
crates/vm-manager/: Cargo.toml
crates/vm-manager/src/: cloudinit.rs  console.rs  error.rs  image.rs  lib.rs  oci.rs  provision.rs  ssh.rs  traits.rs  types.rs  vmfile.rs
crates/vm-manager/src/backends/: mod.rs  noop.rs  propolis.rs  qemu.rs  qmp.rs
crates/vmctl/: Cargo.toml
crates/vmctl/src/: main.rs
crates/vmctl/src/commands/: console.rs  create.rs  destroy.rs  image.rs  list.rs  log.rs  mod.rs  provision_cmd.rs  reload.rs  ssh.rs  start.rs  state.rs  status.rs  stop.rs  up.rs
docs/src/: SUMMARY.md
docs/src/advanced/: oci-registries.md
docs/src/architecture/: backends.md  state-management.md
docs/src/concepts/: vm-lifecycle.md
docs/src/vmfile/: image-sources.md  network.md  overview.md
