[package]
name = "vmctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "vmctl"
path = "src/main.rs"

[dependencies]
vm-manager = { path = "../vm-manager" }
tokio.workspace = true
miette.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dirs.workspace = true
